// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode render correctly with small size 1`] = `
<DocumentFragment>
  .cache-1vjzl24-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 24px;
  height: 32px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-1vjzl24-StyledInput-VerificationCode:hover,
.cache-1vjzl24-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-1vjzl24-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1vjzl24-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-1vjzl24-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-1vjzl24-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-1vjzl24-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-1vjzl24-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-1vjzl24-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":ra:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-1vjzl24-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":ra:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-1vjzl24-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":ra:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-1vjzl24-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":ra:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r0:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r0:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r0:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r0:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r1:-0"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r1:-1"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r1:-2"
      pattern="[0-9]*"
      placeholder="3"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r1:-3"
      pattern="[0-9]*"
      placeholder="7"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="4"
      id=":r1:-4"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="5"
      id=":r1:-5"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r4:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r4:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r4:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r4:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle error 1`] = `
<DocumentFragment>
  .cache-l63rcp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #b3144d;
  font-size: 24px;
  color: #b3144d;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-l63rcp-StyledInput-VerificationCode:hover,
.cache-l63rcp-StyledInput-VerificationCode:focus {
  border-color: #92103f;
}

.cache-l63rcp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-l63rcp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-l63rcp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-l63rcp-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-l63rcp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-l63rcp-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="true"
      aria-label="Verification code 0"
      class="cache-l63rcp-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r9:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 1"
      class="cache-l63rcp-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r9:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 2"
      class="cache-l63rcp-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r9:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 3"
      class="cache-l63rcp-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r9:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r2:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r2:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r2:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r2:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste when type is not number 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r7:-0"
      placeholder=""
      type="text"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r7:-1"
      placeholder=""
      type="text"
      value="h"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r7:-2"
      placeholder=""
      type="text"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r7:-3"
      placeholder=""
      type="text"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="4"
      id=":r7:-4"
      placeholder=""
      type="text"
      value="a"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="5"
      id=":r7:-5"
      placeholder=""
      type="text"
      value="*"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r3:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r3:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r3:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r3:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r5:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r5:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r5:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r5:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .cache-x3v3ff-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-x3v3ff-StyledInput-VerificationCode:hover,
.cache-x3v3ff-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-x3v3ff-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-x3v3ff-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-x3v3ff-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-x3v3ff-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r6:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r6:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r6:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-x3v3ff-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r6:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-1ev4oj7-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  font-size: 24px;
  color: #3f4250;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.cache-1ev4oj7-StyledInput-VerificationCode:hover,
.cache-1ev4oj7-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.cache-1ev4oj7-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1ev4oj7-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-1ev4oj7-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.cache-1ev4oj7-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.cache-1ev4oj7-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.cache-1ev4oj7-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="cache-1ev4oj7-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      disabled=""
      id=":rb:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="cache-1ev4oj7-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      disabled=""
      id=":rb:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="cache-1ev4oj7-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      disabled=""
      id=":rb:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="cache-1ev4oj7-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      disabled=""
      id=":rb:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;
